; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lzma/C/extr_Xz.c_Xz_WriteVarInt.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lzma/C/extr_Xz.c_Xz_WriteVarInt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Xz_WriteVarInt(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %17, %2
  %7 = load i32, i32* %4, align 4
  %8 = and i32 %7, 127
  %9 = or i32 %8, 128
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* %5, align 4
  %12 = add i32 %11, 1
  store i32 %12, i32* %5, align 4
  %13 = zext i32 %11 to i64
  %14 = getelementptr inbounds i32, i32* %10, i64 %13
  store i32 %9, i32* %14, align 4
  %15 = load i32, i32* %4, align 4
  %16 = ashr i32 %15, 7
  store i32 %16, i32* %4, align 4
  br label %17

17:                                               ; preds = %6
  %18 = load i32, i32* %4, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %6, label %20

20:                                               ; preds = %17
  %21 = load i32*, i32** %3, align 8
  %22 = load i32, i32* %5, align 4
  %23 = sub i32 %22, 1
  %24 = zext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %21, i64 %24
  %26 = load i32, i32* %25, align 4
  %27 = and i32 %26, 127
  store i32 %27, i32* %25, align 4
  %28 = load i32, i32* %5, align 4
  ret i32 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
